force-app/main/default/objects/LWC_File_Tracker__c/LWC_File_Tracker__c.object-meta.xml
<CustomObject>
    <label>LWC File Tracker</label>
    <nameField>
        <displayFormat>LFT-{0000}</displayFormat>
        <label>LWC File Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LWC File Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>