force-app/main/default/objects/LWC_File_Tracker__c/fields/LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Name__c</fullName>
    <label>LWC Name</label>
    <type>TextArea</type>
</CustomField>