force-app/main/default/objects/LWC_File_Tracker__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LWC File Tracker</relationshipLabel>
    <relationshipName>LWC_File_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>