force-app/main/default/objects/LWC_File_Tracker__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LWC_File_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>