force-app/main/default/objects/LWC_File_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LWC_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_ID__c</columns>
    <columns>User_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>